# DevWeb2

Tuturial_1/: pyproject.toml
Tuturial_1/core/: settings.py  urls.py
Tuturial_1/hello_world/: views.py
Tuturial_3/: pyproject.toml
Tuturial_3/config/: settings.py
Tuturial_5/: db.sqlite3  pyproject.toml
Tuturial_5/config/: settings.py
Tuturial_5/posts/: views.py
Tuturial_5/posts/migrations/: 0001_initial.py
Tuturial_6/: db.sqlite3  pyproject.toml
Tuturial_6/blog/templates/: base.html  post_detail.html
Tuturial_6/config/: settings.py
Tuturial_7/: pyproject.toml
Tuturial_7/blog/: urls.py  views.py
Tuturial_7/blog/migrations/: 0001_initial.py
Tuturial_7/blog/templates/: post_detail.html
Tuturial_8/: db.sqlite3  pyproject.toml
Tuturial_8/accounts/: urls.py
Tuturial_8/blog/: models.py
Tuturial_8/config/: settings.py
Tuturial_REST_1/: db.sqlite3  pyproject.toml
Tuturial_REST_1/config/: settings.py
Tuturial_REST_2/: pyproject.toml
Tuturial_REST_2/config/: settings.py
Tuturial_REST_3/: db.sqlite3  pyproject.toml
Tuturial_REST_3/config/: settings.py
Tuturial_REST_3/posts/: permissions.py  views.py
Tuturial_REST_3/posts/migrations/: 0001_initial.py
Tuturial_REST_4/: db.sqlite3  pyproject.toml
Tuturial_REST_4/config/: settings.py  urls.py
Tuturial_REST_4/posts/: tests.py
Tuturial_REST_5/: pyproject.toml
Tuturial_REST_5/clientes/: serializers.py  views.py
Tuturial_REST_5/config/: settings.py
Tuturial_REST_6/: db.sqlite3  populate_script.py  pyproject.toml
Tuturial_REST_6/config/: settings.py
(+4 files in other folders)
