[tool.poetry]
name = "tuturial_rest_3"
version = "0.1.0"
description = ""
authors = ["FelipeRoza <feklipefr10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
