[tool.poetry]
name = "tuturial_rest_4"
version = "0.1.0"
description = ""
authors = ["FelipeRoza <feklipefr10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
djangorestframework = "^3.14.0"
Markdown = "^3.4.1"
dj-rest-auth = "^2.2.5"
django-allauth = "^0.51.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
