[tool.poetry]
name = "tuturial_rest_6"
version = "0.1.0"
description = ""
authors = ["FelipeRoza <feklipefr10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
djangorestframework = "^3.14.0"
Markdown = "^3.4.1"
django-filter = "^22.1"
validate-docbr = "^1.10.0"
Faker = "^15.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
